🔧 Add cors origin for production